Update autojoin API to verify keys from Datastore (#64)
* Use datastore to verify API keys

* Fix tests

* Debug

* Fix query to find key

* Add Key field to APIKey

* s/key/api_key/

* Update register command to not require org name anymore

* Add validation via datastore to the delete endpoint too

* Fix tests
