# openapi.yaml
@@ -22,11 +22,11 @@ info:
 host: "autojoin-dot-{{PROJECT}}.appspot.com"
 
 consumes:
-- "application/json"
+  - "application/json"
 produces:
-- "application/json"
+  - "application/json"
 schemes:
-- "https"
+  - "https"
 
 paths:
   # DOES NOT require an API key.
@@ -56,7 +56,7 @@ paths:
       produces:
         - "application/json"
       responses:
-        '200':
+        "200":
           description: Registration was successful.
       tags:
         - public
@@ -72,16 +72,15 @@ paths:
       operationId: "autojoin-v0-node-register"
       parameters:
         - in: query
+          name: api_key
+          type: string
+          required: true
+          description: API key.
+        - in: query
           name: service
           type: string
           required: true
           description: Service name.
-        - in: query
-          name: organization
-          type: string
-          required: true
-          description: Organization name. Must be the name of a previously registered
-            organization.
         - in: query
           name: iata
           type: string
@@ -91,7 +90,8 @@ paths:
           name: ipv4
           type: string
           required: false
-          description: IPv4 service address. If not provided, the client origin IP is
+          description:
+            IPv4 service address. If not provided, the client origin IP is
             used. If request originates from an IPv6 address, and the ipv4
             parameter is not provided, registration will fail.
         - in: query
@@ -102,10 +102,8 @@ paths:
       produces:
         - "application/json"
       responses:
-        '200':
+        "200":
           description: Registration was successful.
-      security:
-        - api_key: []
       tags:
         - public
   "/autojoin/v0/node/delete":
@@ -117,6 +115,11 @@ paths:
       operationId: "autojoin-v0-node-delete"
       parameters:
         - in: query
+          name: api_key
+          type: string
+          required: true
+          description: API key.
+        - in: query
           name: hostname
           type: string
           required: true
@@ -124,10 +127,8 @@ paths:
       produces:
         - "application/json"
       responses:
-        '200':
+        "200":
           description: Deletion was successful.
-      security:
-        - api_key: []
       tags:
         - public
   "/autojoin/v0/node/list":
@@ -145,22 +146,10 @@ paths:
       produces:
         - "application/json"
       responses:
-        '200':
+        "200":
           description: List was successful.
       tags:
         - public
-
-
-securityDefinitions:
-  # This section configures basic authentication with an API key.
-  # Paths configured with api_key security require an API key for all requests.
-  api_key:
-    type: "apiKey"
-    description: |-
-      An API key for your organization, restricted to the Autojoin API. API keys
-      are allocated by M-Lab for use by a registered organization.
-    name: "key"
-    in: "query"
 
 tags:
   - name: public
